--- a/apps/frontend/src/assets/css/style.css
+++ b/apps/frontend/src/assets/css/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 #w {
-  padding: 30px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +54,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 h1 {
@@ -67,14 +67,14 @@ h2 {
   color: var(--color-text-light);
   font-weight: 600;
   font-size: 1.4em;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 
 .card {
   background-color: var(--color-card-bg);
   border-radius: 12px;
   box-shadow: var(--shadow-main);
-  padding: 30px;
+  padding: 5px;
   margin-bottom: 30px;
   width: 100%;
   max-width: 1200px;
@@ -83,12 +83,12 @@ h2 {
 /* --- 2. Элементы управления (Кнопки) --- */
 
 .icon {
-  margin-right: 8px;
+  /* margin-right: 8px; */
 }
 
 .control-btn,
 .action-btn {
-  padding: 10px 18px;
+  padding: 5px 7px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -120,8 +120,8 @@ h2 {
 
 /* Кнопки действий в таблице */
 .action-btn {
-  padding: 6px 10px;
-  margin-right: 8px;
+  padding: 3px 5px;
+  /* margin-right: 8px; */
   font-size: 0.85em;
 }
 
@@ -146,13 +146,13 @@ h2 {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px 30px;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 
 .form-group > label {
   display: flex;
   flex-direction: column;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
   color: var(--color-text-light);
   font-weight: 300;
   /* width: 250px; */
@@ -163,7 +163,7 @@ h2 {
 }
 
 input:not([type='checkbox']) {
-  padding: 12px 15px;
+  padding: 4px 7px;
   border: none;
   border-radius: 8px;
   background-color: var(--color-bg-dark);
@@ -186,7 +186,7 @@ input:not([type='checkbox']):focus {
   align-items: center;
   gap: 15px;
   grid-column: span 1;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 .checkbox-group label {
   margin-bottom: 0;
@@ -209,7 +209,7 @@ input:not([type='checkbox']):focus {
 #user-table th {
   background-color: var(--color-primary);
   color: white;
-  padding: 15px 20px;
+  padding: 6px 8px;
   text-align: left;
   font-weight: 600;
   position: sticky;
@@ -226,7 +226,7 @@ input:not([type='checkbox']):focus {
 
 /* Ячейки данных */
 #user-table td {
-  padding: 15px 20px;
+  padding: 5px 7px;
   border-bottom: 1px solid var(--color-bg-dark); /* Тонкий разделитель */
   transition: background-color var(--transition-speed);
 }
@@ -276,7 +276,7 @@ input:not([type='checkbox']):focus {
 
 @media screen and (max-width: 700px) {
   body {
-    padding: 15px;
+    /* padding: 15px; */
   }
 
   .main-header {
@@ -286,7 +286,7 @@ input:not([type='checkbox']):focus {
 
   .table-controls {
     width: 100%;
-    margin-top: 15px;
+    /* margin-top: 15px; */
   }
 
   .form-grid {
@@ -314,14 +314,14 @@ input:not([type='checkbox']):focus {
 
   tr {
     border: 1px solid var(--border-color);
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
   }
 
   td {
     border: none;
     border-bottom: 1px solid var(--border-color);
     position: relative;
-    padding-left: 50%;
+    /* padding-left: 50%; */
     text-align: right;
   }
 
@@ -338,10 +338,10 @@ input:not([type='checkbox']):focus {
 
   .actions-cell {
     text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
   .action-btn {
-    margin: 5px;
+    /* margin: 5px; */
   }
 }
