Implemented: cars at frontend

--- a/apps/frontend/src/assets/css/style.css
+++ b/apps/frontend/src/assets/css/style.css
@@ -262,7 +262,7 @@ input:not([type='checkbox']):focus {
 }
 
 /* Центрирование чекбокса */
-.online-checkbox-cell {
+.checkbox-cell {
   text-align: center;
 }
 
